--- a/src/server/intersection-data-collector/config/data-collection-module-config.json
+++ b/src/server/intersection-data-collector/config/data-collection-module-config.json
@@ -8,7 +8,7 @@
     },
     "EmailRecipients":[
     "nvaltekar@email.arizona.edu",
-    "klhead@email.arizona.edu",
+    "klhead@email.arizona.edu"
     ]
 
 }
