Update config file for speedway-mountain

--- a/docker/corridors/speedway/rse82_mountain/nojournal/bin/mmitss-phase3-master-config.json
+++ b/docker/corridors/speedway/rse82_mountain/nojournal/bin/mmitss-phase3-master-config.json
@@ -9,6 +9,7 @@
     "DataCollectorIP": "10.12.6.109",
     "HMIControllerIP": "10.12.6.56",
     "VehicleType" : 6,
+    "Logging" : "True",
     "PortNumber":
 	{
 		"MessageTransceiver":
