--- a/src/mrp/Priority-Request-Server/Makefile
+++ b/src/mrp/Priority-Request-Server/Makefile
@@ -14,7 +14,7 @@ LIBS        := -L$(J2735_LIB) -L$(MMITSS_COMMON_LIB) -L$(MAPENGINE_LIB) -L$(NETS
 #cpp's go here
 SRC += main.cpp  PriorityRequestServer.cpp 
 #the name of the executable goes here
-TARGET = PRS
+TARGET = M_PriorityRequestServer
 
 # list the .o's corresponding to .cpp's
 # see: https://www.gnu.org/software/make/manual/html_node/Text-Functions.html
