--- a/docker/corridors/Anthem/Daisy-Hastings/nojournal/bin/mmitss-phase3-master-config.json
+++ b/docker/corridors/Anthem/Daisy-Hastings/nojournal/bin/mmitss-phase3-master-config.json
@@ -24,13 +24,14 @@
         "HostBsmDecoder": 10005,
 		"TrajectoryAware": 20001,
 		"PriorityRequestServer": 20002,
-		"PrioritySOlver": 20003,
+		"PrioritySolver": 20003,
 		"PriorityRequestGenerator": 20004,
 		"TrafficControllerCommander": 20005,
 		"TrafficControllerCurrPhaseListener": 20006,
 		"PerformanceObserver": 20007,
 		"ISIG": 20008,
         "HMIController": 20009,
+        "PrioritySolverToTCIInterface": 20010,
 		"MapSPaTBroadcaster": 6053,
 		"RSUOBUImageForwarder": 1516,
         "PriorityRequestServer_SendSSM": 50003,
