--- a/docker/corridors/Anthem/Daisy-Hastings/nojournal/bin/mmitss-phase3-master-config.json
+++ b/docker/corridors/Anthem/Daisy-Hastings/nojournal/bin/mmitss-phase3-master-config.json
@@ -28,8 +28,8 @@
 		"PriorityRequestGenerator": 20004,
 		"TrafficControllerCommander": 20005,
 		"TrafficControllerCurrPhaseListener": 20006,
-		"PerformanceObserver": 20007,
-		"ISIG": 20008,
+		"TrafficControllerTimingPlanSender": 20007,
+		"PerformanceObserver": 20008,
         "HMIController": 20009,
 		"MapSPaTBroadcaster": 6053,
 		"RSUOBUImageForwarder": 1516,
