--- a/Dockerfile.base
+++ b/Dockerfile.base
@@ -3,22 +3,17 @@
 #    The image can be used to spawn containers that can simulate each         #
 #         RSU that needs to be present in the simulated network               #
 #-----------------------------------------------------------------------------#
-FROM ubuntu:18.04
+#FROM ubuntu:18.04
+FROM alpine:3.12.0 AS mmitss-base
 
 MAINTAINER D Cunningham (pearson10m@gmail.com)
 
+# perform a sysupgrade and install some necessary packages 
+#RUN apt-get update && apt-get upgrade -y && apt-get install -y build-essential wget gdb ddd ssh libperl-dev libglpk-dev libssl-dev
+#RUN apk update && apk upgrade -y && apk add --update aloine-sdk
 # iputils-ping iproute2 gdb ddd
 
-# perform a sysupgrade and install some necessary packages 
-RUN apt-get update && apt-get upgrade -y && apt-get install -y build-essential wget gdb ddd ssh libperl-dev libglpk-dev libssl-dev
-
-# Download and install pip managing python libraries
-RUN apt-get install python3-pip
-
-# Download and install required python libraries
-RUN pip3 install haversine && pip3 install apscheduler && pip3 install easysnmp && pip3 install sh
-
-# Add the shared libraries we need to run
+# Add the shared libraries mmitss needs in order to run
 COPY ./3rdparty/net-snmp/lib/x86/libnetsnmp.so.35.0.0 /usr/local/lib/mmitss/
 COPY ./3rdparty/glpk/lib/x86/libglpk.so.35.1.0 /usr/local/lib/mmitss/
 COPY ./lib/x86/libmmitss-common.so /usr/local/lib/mmitss/
@@ -28,9 +23,14 @@ COPY ./3rdparty/asn1j2735/lib/x86/libdsrc.so.1.0 /usr/local/lib/mmitss/
 COPY ./lib/mmitss.conf /etc/ld.so.conf.d/
 
 # Create the symbolic links for the copied libraries."
-RUN ln -s /usr/local/lib/mmitss/libnetsnmp.so.35.0.0 /usr/local/lib/mmitss/libnetsnmp.so.35 && ln -s /usr/local/lib/mmitss/libglpk.so.35.1.0 /usr/local/lib/mmitss/libglpk.so.35 //
-&& ln -s /usr/local/lib/mmitss/liblocAware.so.1.0 /usr/local/lib/mmitss/liblocAware.so && ln -s /usr/local/lib/mmitss/libasn.so.1.0 /usr/local/lib/mmitss/libasn.so //
-&& ln -s /usr/local/lib/mmitss/libdsrc.so.1.0 /usr/local/lib/mmitss/libdsrc.so && ldconfig
+RUN ln -s /usr/local/lib/mmitss/libnetsnmp.so.35.0.0 /usr/local/lib/mmitss/libnetsnmp.so.35 && ln -s /usr/local/lib/mmitss/libglpk.so.35.1.0 /usr/local/lib/mmitss/libglpk.so.35 
+RUN ln -s /usr/local/lib/mmitss/liblocAware.so.1.0 /usr/local/lib/mmitss/liblocAware.so && ln -s /usr/local/lib/mmitss/libasn.so.1.0 /usr/local/lib/mmitss/libasn.so 
+RUN ln -s /usr/local/lib/mmitss/libdsrc.so.1.0 /usr/local/lib/mmitss/libdsrc.so
+RUN ldconfig /etc/ld.so.conf.d/
+
+RUN mkdir /mmitss
+
+WORKDIR /mmitss
 
 # Environment variables
 ENV PATH $PATH:/mmitss
