--- a/src/mrp/Priority-Request-Solver/Test/PriorityRequestSender/Makefile
+++ b/src/mrp/Priority-Request-Solver/Test/PriorityRequestSender/Makefile
@@ -1,8 +1,7 @@
-# PRG Makefile 
-BUILD_ROOT=../../../..
+# Sample Makefile for building with the uper codec and json libraries
+BUILD_ROOT=../../../../..
 MAKE_ROOT :=$(BUILD_ROOT)/make
 include $(MAKE_ROOT)/newheader.mk
-
 
 INCLUDES    := -I$(BUILD_ROOT)/3rdparty/ -I$(COMMON_INCL) -I$(GLPK_INCL)  # tell the compiler where to find the include directories
 #LDFLAGS     := -Wl,-rpath=$(J2735_SO_DIR) # tell the linker to add a path to the j2735 shared lib 
@@ -10,14 +9,14 @@ INCLUDES    := -I$(BUILD_ROOT)/3rdparty/ -I$(COMMON_INCL) -I$(GLPK_INCL)  # tell
 LIBS        := -L$(MMITSS_COMMON_LIB) -L$(GLPK_LIB) -lmmitss-common -lglpk   #tell the linker where to find the libraries
 
 #cpp's go here
-SRC += TCIMsgSender.cpp 
+SRC += priorityRequestSender.cpp
 #the name of the executable goes here
-TARGET = M_TCIMsgSender
+#the name of the executable goes here
+TARGET = M_priorityRequestSender
 
 # list the .o's corresponding to .cpp's
 # see: https://www.gnu.org/software/make/manual/html_node/Text-Functions.html
 OBJECTS = $(patsubst %.cpp, %.o, $(SRC))
 
 include $(MAKE_ROOT)/newrules.mk
-
 
