--- a/src/mrp/Priority-Request-Solver/Test/TCIMsgSender/Makefile
+++ b/src/mrp/Priority-Request-Solver/Test/TCIMsgSender/Makefile
@@ -1,5 +1,5 @@
 # PRG Makefile 
-BUILD_ROOT=../../../..
+BUILD_ROOT=../../../../..
 MAKE_ROOT :=$(BUILD_ROOT)/make
 include $(MAKE_ROOT)/newheader.mk
 
@@ -10,9 +10,9 @@ INCLUDES    := -I$(BUILD_ROOT)/3rdparty/ -I$(COMMON_INCL) -I$(GLPK_INCL)  # tell
 LIBS        := -L$(MMITSS_COMMON_LIB) -L$(GLPK_LIB) -lmmitss-common -lglpk   #tell the linker where to find the libraries
 
 #cpp's go here
-SRC += main.cpp  PriorityRequestSolver.cpp SolverDataManager.cpp ScheduleManager.cpp
+SRC += TCIMsgSender.cpp 
 #the name of the executable goes here
-TARGET = M_PriorityRequestSolver
+TARGET = M_TCIMsgSender
 
 # list the .o's corresponding to .cpp's
 # see: https://www.gnu.org/software/make/manual/html_node/Text-Functions.html
