--- a/bin/Dockerfile
+++ b/bin/Dockerfile
@@ -1,8 +1,7 @@
 #-----------------------------------------------------------------------------#
 #    Dockerfile to build an rsu image for an intersection                     #
 #-----------------------------------------------------------------------------#
-FROM mmitssuarizona/mmitss-base:1.1
-
+FROM mmitssuarizona/mmitss-base:1.2
 MAINTAINER D Cunningham (donaldcunningham@email.arizona.edu)
 
 COPY WirelessMsgDecoder/M_WirelessMsgDecoder /mmitss
@@ -13,10 +12,6 @@ COPY MsgEncoder/M_MsgEncoder /mmitss
 COPY HostBsmDecoder/M_HostBsmDecoder /mmitss
 COPY MapSpatBroadcaster/M_MapSpatBroadcaster /mmitss
 
-CMD ./M_MapSpatBroadcaster
-CMD ./M_HostBsmDecoder
-CMD ./M_MsgEncoder
-CMD ./M_WirelessMsgDecoder
-CMD ./M_PriorityRequestServer
-CMD ./M_PrioritySolver
-CMD ./M_TrafficControllerInterface
+COPY supervisord.conf /mmitss
+CMD ["/usr/bin/supervisord"]
+
