Fixed error in supervisord.conf

--- a/bin/supervisord.conf
+++ b/bin/supervisord.conf
@@ -88,7 +88,7 @@ serverurl=unix:///tmp/supervisor.sock ; use a unix:// URL  for a unix socket
 ;serverurl=AUTO                ; override serverurl computation (childutils)
 
 [program: M_WirelessMsgDecoder]
-command=./
+command=./M_WirelessMsgDecoder
 directory=/mmitss
 redirect_stderr=true          
 stdout_logfile=/dev/fd/1        
