--- a/bin/corridors/Anthem/Daisy-Hastings/nojournal/bin/mmitss-phase3-master-config.json
+++ b/bin/corridors/Anthem/Daisy-Hastings/nojournal/bin/mmitss-phase3-master-config.json
@@ -67,7 +67,7 @@
 		"TimingPlanUpdateInterval_sec": 60,
 		"NtcipBackupTime_sec": 300,
         "Vendor": "Econolite",
-        "TimingPlanMib": "EconoliteMib",
+        "TimingPlanMib": "/nojournal/bin/EconoliteMib.py",
         "InactiveVehPhases":[],
         "InactivePedPhases":[],
 		"SplitPhases":
