updated dockerfiles for further improvements

--- a/bin/supervisord.conf
+++ b/bin/supervisord.conf
@@ -122,12 +122,19 @@ redirect_stderr=true
 stdout_logfile=/dev/fd/1        
 stdout_logfile_maxbytes=0 
 
-[program: M_PrioritySolver]
-command=./M_PrioritySolver
+[program: M_PriorityRequestSolver]
+command=./M_PriorityRequestSolver
 directory=/mmitss
 redirect_stderr=true          
 stdout_logfile=/dev/fd/1        
 stdout_logfile_maxbytes=0 
+
+[program: M_SnmpEngine]
+command=./M_SnmpEngine
+directory=/mmitss
+redirect_stderr=true
+stdout_logfile=/dev/fd/1
+stdout_logfile_maxbytes=0
 
 [program: M_TrafficControllerInterface]
 command=./M_TrafficControllerInterface
