--- a/bin/docker-compose.yml
+++ b/bin/docker-compose.yml
@@ -78,7 +78,7 @@ networks:
     mmitss_vlan:
         driver: macvlan
         driver_opts:
-            parent: enp0s31f6 
+            parent: enp1s0 
         ipam:
             config:
               - subnet: 10.12.6.0/27
