--- a/bin/dockerfiles/x86/Dockerfile.x86
+++ b/bin/dockerfiles/x86/Dockerfile.x86
@@ -1,15 +1,15 @@
 #-----------------------------------------------------------------------------#
 #    Dockerfile to build an x86 platform image for an intersection            #
 #-----------------------------------------------------------------------------#
-FROM mmitssuarizona/mmitss-base:1.2
+FROM mmitssuarizona/mmitss-base-x86:1.3
 
-COPY WirelessMsgDecoder/x86/M_WirelessMsgDecoder /mmitss
-COPY TrafficControllerInterface/x86/M_TrafficControllerInterface /mmitss
-COPY PriorityRequestSolver/x86/M_PriorityRequestSolver /mmitss
-COPY PriorityRequestServer/x86/M_PriorityRequestServer /mmitss
-COPY SnmpEngine/x86/M_SnmpEngine /mmitss
-COPY MsgEncoder/x86/M_MsgEncoder /mmitss
-COPY MapSpatBroadcaster/x86/M_MapSpatBroadcaster /mmitss
+COPY ./../WirelessMsgDecoder/x86/M_WirelessMsgDecoder /mmitss
+COPY ./../TrafficControllerInterface/x86/M_TrafficControllerInterface /mmitss
+COPY ./../PriorityRequestSolver/x86/M_PriorityRequestSolver /mmitss
+COPY ./../PriorityRequestServer/x86/M_PriorityRequestServer /mmitss
+COPY ./../SnmpEngine/x86/M_SnmpEngine /mmitss
+COPY ./../MsgEncoder/x86/M_MsgEncoder /mmitss
+COPY ./../MapSpatBroadcaster/x86/M_MapSpatBroadcaster /mmitss
 
 COPY supervisord.conf /mmitss
 CMD ["/usr/bin/supervisord"]
