added support for distributing map and ssm

--- a/src/simulation/message-distributor/message_distributor_config.json
+++ b/src/simulation/message-distributor/message_distributor_config.json
@@ -42,5 +42,19 @@
         "passenger":[
 
         ]
-    }
+    },
+    "map_clients":
+    [
+        {
+            "ip_address": "10.12.6.101",
+            "port":5003
+        }
+    ],
+    "ssm_clients":
+    [
+        {
+            "ip_address": "10.12.6.101",
+            "port":5003
+        }
+    ]
 }
