--- a/bin/corridors/Anthem/Daisy-Dedication/nojournal/bin/mmitss-phase3-master-config.json
+++ b/bin/corridors/Anthem/Daisy-Dedication/nojournal/bin/mmitss-phase3-master-config.json
@@ -7,6 +7,8 @@
     "RegionalID" : 0,
 	"DataCollectorIP": "172.3.1.91",
     "HMIControllerIP": "10.12.6.56",
+    "MessageDistributorIP": "10.12.6.57",
+	"PriorityRequestGeneratorServerIP": "10.12.6.57",
     "VehicleType" : 6,
     "Logging" : "True",
     "SRMTimedOutTime" : 10.0,
@@ -19,6 +21,7 @@
 			"MessageEncoder": 10003,
 			"MessageDecoder": 10002
 		},
+		"MessageDistributor": 5000,
 		"RsmDecoder": 10006,
 		"OBUBSMReceiver": 10005,
         "HostBsmDecoder": 10005,
@@ -38,7 +41,8 @@
         "PriorityRequestServer_SendSSM": 50003,
         "DataCollector": 30006,
         "SnmpEngine": 20020,
-        "SnmpEngineInterface": 20021
+		"SnmpEngineInterface": 20021,
+		"PriorityRequestGeneratorServer": 20022
 	},
     "psid":
         {
