added a function to log on demand

--- a/bin/corridors/simulation-tools/nojournal/bin/mmitss-message-distributor-config.json
+++ b/bin/corridors/simulation-tools/nojournal/bin/mmitss-message-distributor-config.json
@@ -1,5 +1,6 @@
 {
-    "package_drop_probability": 0,    
+    "package_drop_probability": 0,
+    "raw_bsm_logging": true,   
     "intersections": [
         {
             "name": "DaisyMountain_GavilanPeak",
