--- a/bin/dockerfiles/arm/Dockerfile-mrp.arm
+++ b/bin/dockerfiles/arm/Dockerfile-mrp.arm
@@ -1,7 +1,7 @@
 #-----------------------------------------------------------------------------#
 #    Dockerfile to build an arm platform image for an intersection            #
 #-----------------------------------------------------------------------------#
-FROM mmitssuarizona/mmitss-base:1.2
+FROM mmitssuarizona/mmitss-arm-base:1.0
 MAINTAINER D Cunningham (donaldcunningham@email.arizona.edu)
 
 COPY WirelessMsgDecoder/arm/M_WirelessMsgDecoder /mmitss
@@ -12,6 +12,6 @@ COPY SnmpEngine/arm/M_SnmpEngine /mmitss
 COPY MsgEncoder/arm/M_MsgEncoder /mmitss
 COPY MapSpatBroadcaster/arm/M_MapSpatBroadcaster /mmitss
 
-COPY supervisord.conf /mmitss
+COPY supervisord-mrp.conf /mmitss/supervisord.conf
 CMD ["/usr/bin/supervisord"]
 
