--- a/bin/corridors/Anthem/Daisy-Gavilan/nojournal/bin/mmitss-phase3-master-config.json
+++ b/bin/corridors/Anthem/Daisy-Gavilan/nojournal/bin/mmitss-phase3-master-config.json
@@ -10,7 +10,7 @@
 	"HMIControllerIP": "10.12.6.56",
 	"MessageDistributorIP": "10.12.6.20",
 	"PriorityRequestGeneratorServerIP": "10.12.6.20",
-    "VehicleType" : 6,
+    "VehicleType" : "Transit",
     "Logging" : "True",
     "SRMTimedOutTime" : 10.0,
     "PortNumber":
@@ -43,7 +43,10 @@
         "DataCollector": 30006,
         "SnmpEngine": 20020,
 		"SnmpEngineInterface": 20021,
-		"PriorityRequestGeneratorServer": 20022
+		"PriorityRequestGeneratorServer": 20022,
+        "TrajectoryAware_MapEngineInterface": 20023,
+        "MapEngine":20024,
+        "LightSirenStatusManager": 20025
 	},
     "psid":
         {
