--- a/bin/supervisord-mrp.conf
+++ b/bin/supervisord-mrp.conf
@@ -90,6 +90,7 @@ serverurl=unix:///tmp/supervisor.sock ; use a unix:// URL  for a unix socket
 [program: M_WirelessMsgDecoder]
 command=./M_WirelessMsgDecoder
 directory=/mmitss
+priority=5
 redirect_stderr=true          
 stdout_logfile=/dev/fd/1        
 stdout_logfile_maxbytes=0 
@@ -97,6 +98,7 @@ stdout_logfile_maxbytes=0
 [program: M_MsgEncoder]
 command=./M_MsgEncoder
 directory=/mmitss
+priority=4
 redirect_stderr=true          
 stdout_logfile=/dev/fd/1        
 stdout_logfile_maxbytes=0 
@@ -104,6 +106,7 @@ stdout_logfile_maxbytes=0
 [program: M_SnmpEngine]
 command=./M_SnmpEngine
 directory=/mmitss
+priority=1
 redirect_stderr=true
 stdout_logfile=/dev/fd/1
 stdout_logfile_maxbytes=0
@@ -111,6 +114,7 @@ stdout_logfile_maxbytes=0
 [program: M_TrafficControllerInterface]
 command=./M_TrafficControllerInterface
 directory=/mmitss
+priority=6
 redirect_stderr=true          
 stdout_logfile=/dev/fd/1        
 stdout_logfile_maxbytes=0 
@@ -118,6 +122,7 @@ stdout_logfile_maxbytes=0
 [program: M_MapSpatBroadcaster]
 command=./M_MapSpatBroadcaster
 directory=/mmitss
+priority=2
 redirect_stderr=true          
 stdout_logfile=/dev/fd/1        
 stdout_logfile_maxbytes=0 
@@ -125,6 +130,7 @@ stdout_logfile_maxbytes=0
 [program: M_PriorityRequestServer]
 command=./M_PriorityRequestServer
 directory=/mmitss
+priority=3
 redirect_stderr=true          
 stdout_logfile=/dev/fd/1        
 stdout_logfile_maxbytes=0 
@@ -132,6 +138,7 @@ stdout_logfile_maxbytes=0
 [program: M_PriorityRequestSolver]
 command=./M_PriorityRequestSolver
 directory=/mmitss
+priority=7
 redirect_stderr=true          
 stdout_logfile=/dev/fd/1        
 stdout_logfile_maxbytes=0 
