changed the kill signal for TCI to allow for graceful stopping

--- a/bin/supervisord-mrp.conf
+++ b/bin/supervisord-mrp.conf
@@ -115,6 +115,7 @@ stdout_logfile_maxbytes=0
 command=./M_TrafficControllerInterface
 directory=/mmitss
 priority=6
+stopsignal=INT
 redirect_stderr=true          
 stdout_logfile=/dev/fd/1        
 stdout_logfile_maxbytes=0 
