--- a/bin/corridors/Anthem/Daisy-Dedication/nojournal/bin/mmitss-phase3-master-config.json
+++ b/bin/corridors/Anthem/Daisy-Dedication/nojournal/bin/mmitss-phase3-master-config.json
@@ -42,7 +42,12 @@
         "DataCollector": 30006,
         "SnmpEngine": 20020,
 		"SnmpEngineInterface": 20021,
-		"PriorityRequestGeneratorServer": 20022
+		"PriorityRequestGeneratorServer": 20022,
+        "TrajectoryAware_MapEngineInterface": 20023,
+        "MapEngine":20024,
+        "LightSirenStatusManager": 20025,
+        "PeerToPeerPriority":20026,
+        "SystemPerformanceDataCollector": 20027 
 	},
     "psid":
         {
