added map-engine, traffic controller interface and updated the server, dockerfiles, make and launchscripts

--- a/bin/Dockerfile
+++ b/bin/Dockerfile
@@ -8,6 +8,9 @@ COPY SnmpEngine/x86/M_SnmpEngine /mmitss
 COPY PriorityRequestSolver/x86/M_PriorityRequestSolver /mmitss
 COPY PriorityRequestServer/x86/M_PriorityRequestServer /mmitss
 COPY MapSpatBroadcaster/x86/M_MapSpatBroadcaster /mmitss
+COPY TrajectoryAware/x86/M_TrajectoryAware /mmitss
+COPY MapEngine/x86/M_MapEngine /mmitss
+COPY SystemPerformanceDataCollector/x86/M_SystemPerformanceDataCollector /mmitss
 
 COPY supervisord.conf /mmitss
 CMD ["/usr/bin/supervisord"]
