--- a/bin/supervisord-vsp.conf
+++ b/bin/supervisord-vsp.conf
@@ -87,9 +87,18 @@ serverurl=unix:///tmp/supervisor.sock ; use a unix:// URL  for a unix socket
 ;environment=A="1",B="2"       ; process environment additions (def no adds)
 ;serverurl=AUTO                ; override serverurl computation (childutils)
 
+[program: M_HostBsmDecoder]
+command=./M_HostBsmDecoder
+directory=/mmitss
+priority=1
+redirect_stderr=true
+stdout_logfile=/dev/fd/1
+stdout_logfile_maxbytes=0
+
 [program: M_WirelessMsgDecoder]
 command=./M_WirelessMsgDecoder
 directory=/mmitss
+priority=2
 redirect_stderr=true          
 stdout_logfile=/dev/fd/1        
 stdout_logfile_maxbytes=0 
@@ -97,25 +106,26 @@ stdout_logfile_maxbytes=0
 [program: M_MsgEncoder]
 command=./M_MsgEncoder
 directory=/mmitss
+priority=3
 redirect_stderr=true          
 stdout_logfile=/dev/fd/1        
 stdout_logfile_maxbytes=0 
-
-[program: M_HostBsmDecoder]
-command=./M_HostBsmDecoder
-directory=/mmitss
-redirect_stderr=true
-stdout_logfile=/dev/fd/1
-stdout_logfile_maxbytes=0
 
 [program: M_PriorityRequestGenerator]
 command=./M_PriorityRequestGenerator
 directory=/mmitss
+priority=4
 redirect_stderr=true          
 stdout_logfile=/dev/fd/1        
 stdout_logfile_maxbytes=0 
 
-
+[program: M_SystemPerformanceDataCollector]
+command=./M_SystemPerformanceDataCollector
+directory=/mmitss
+priority=10
+redirect_stderr=true          
+stdout_logfile=/dev/fd/1        
+stdout_logfile_maxbytes=0 
 
 ; The below sample eventlistener section shows all possible
 ; eventlistener subsection values, create one or more 'real'
