--- a/bin/corridors/Anthem/Daisy-Gavilan/nojournal/bin/mmitss-phase3-master-config.json
+++ b/bin/corridors/Anthem/Daisy-Gavilan/nojournal/bin/mmitss-phase3-master-config.json
@@ -96,6 +96,11 @@
             "5": true,
             "7": true
         }
-
+	},
+    "IntersectionReferencePoint": 
+    {
+		"Latitude_DecimalDegree": 33.84293808964164,
+		"Longitude_DecimalDegree": -112.1351945016523,
+		"Elevation_Meter": 506
 	}
 }
