build and test vsp docker image

--- a/bin/dockerfiles/arm/Dockerfile-vsp.arm
+++ b/bin/dockerfiles/arm/Dockerfile-vsp.arm
@@ -8,6 +8,7 @@ COPY WirelessMsgDecoder/arm/M_WirelessMsgDecoder /mmitss
 COPY MsgEncoder/arm/M_MsgEncoder /mmitss
 COPY HostBsmDecoder/arm/M_HostBsmDecoder /mmitss
 COPY PriorityRequestGenerator/arm/M_PriorityRequestGenerator /mmitss
+COPY SystemPerformanceDataCollector/arm/M_SystemPerformanceDataCollector /mmitss
 
 COPY supervisord-vsp.conf /mmitss/supervisord.conf
 CMD ["/usr/bin/supervisord"]
