completed the test on vsp and mrp container, ready for the field test at tucson

--- a/bin/supervisord-mrp.conf
+++ b/bin/supervisord-mrp.conf
@@ -157,8 +157,7 @@ directory=/mmitss
 priority=9
 stopsignal=INT
 redirect_stderr=true          
-stdout_logfile=/dev/fd/1        
-stdout_logfile_maxbytes=0 
+stdout_logfile=/nojournal/bin/log/tciLog.txt        
 
 [program: M_SystemPerformanceDataCollector]
 command=./M_SystemPerformanceDataCollector
