added ScheduleExecutionBuffer key to configuration files of all intersections in Anthem, vehicle, and simulation tools

--- a/bin/corridors/simulation-tools/nojournal/bin/mmitss-phase3-master-config.json
+++ b/bin/corridors/simulation-tools/nojournal/bin/mmitss-phase3-master-config.json
@@ -12,6 +12,7 @@
 	"VehicleType": 6,
 	"Logging": "True",
 	"SRMTimedOutTime": 10.0,
+	"ScheduleExecutionBuffer": 1.0,
 	"PortNumber": {
 		"MessageTransceiver": {
 			"MessageSender": 10003,
