--- a/bin/corridors/Anthem/Daisy-Dedication/nojournal/bin/mmitss-phase3-master-config.json
+++ b/bin/corridors/Anthem/Daisy-Dedication/nojournal/bin/mmitss-phase3-master-config.json
@@ -12,6 +12,7 @@
 	"VehicleType": "Transit",
 	"Logging": "False",
 	"SRMTimedOutTime": 10.0,
+	"ScheduleExecutionBuffer": 1.0,
 	"SystemPerformanceTimeInterval": 300.0,
 	"ApplicationPlatform": "roadside",
 	"PortNumber": {
